--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday Fira! 🎉</title>
+    <title>Happy Birthday Fira</title>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;600;700&family=Pacifico&display=swap" rel="stylesheet">
     <style>
         * {
@@ -859,7 +859,7 @@
         // Open Spotify
         function openSpotify() {
             // Replace with actual Spotify link when available
-            window.open('https://open.spotify.com/', '_blank');
+            window.open('https://open.spotify.com/track/5JESuE80fvausWHjcT9QVh?si=nn8qpiMrSDCiGygDxIt-tw', '_blank');
             closeModal();
         }
 
