--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
         <div class="home-page" id="homePage">
             <h1 class="title">Happy Birthday Fira!</h1>
             <div class="buttons-container">
-                <a href="#" class="btn" id="chatBtn">💬 Ngobrol</a>
+                <a href="https://parel2.github.io/OBROLAN/" class="btn" id="chatBtn">💬 Ngobrol</a>
                 <button class="btn" id="gameBtn">🎮 Game</button>
             </div>
         </div>
