--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
         chatBtn.addEventListener('click', function(e) {
             e.preventDefault();
             // Replace with actual chat link when available
-            window.open('https://wa.me/', '_blank');
+            window.open('https://parel2.github.io/OBROLAN/', '_blank');
         });
 
         // Game button click handler
