--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
                     <div>Level: <span id="levelDisplay">1</span></div>
                 </div>
                 <div class="target-score-area">
-                    Target: 200 Poin
+                    Target: 200 Poin<br>TEKAN EMOT WOI
                 </div>
                 <!-- Angels will be dynamically added here -->
             </div>
@@ -850,7 +850,7 @@
             // Check win condition
             if (game2Score >= 200) {
                 stopGame2();
-                showModal('Selamat! Kamu sudah mencapai 200 point.', [
+                showModal('Akhirnya menang juga, nih lagu akselerasi.', [
                     { text: '🎵 Dengarkan', action: openSpotify }
                 ]);
             }
