--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
             <h1 class="title">Happy Birthday Fira!</h1>
             <div class="buttons-container">
                 <a href="https://parel2.github.io/OBROLAN/" class="btn" id="chatBtn">💬 Ngobrol</a>
-                <a href="s" class="btn" id="chatBtn">bunga kecil</a>
+                <a href="https://parel2.github.io/bunga/" class="btn" id="chatBtn">bunga kecil</a>
                 <button class="btn" id="gameBtn">🎮 Game</button>
             </div>
         </div>
